
[package]
authors = ["wetteyve <mail@yveswetter.ch>"]
edition = "2021"
name    = "rusty"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "3.7.0"
napi-derive = "3.4.0"
rand        = "0.9.2"

[build-dependencies]
napi-build = "2.3.1"

[profile.release]
lto   = true
strip = "symbols"
