
[package]
authors = ["wetteyve <mail@yveswetter.ch>"]
edition = "2021"
name    = "rusty"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
napi        = { version = "3.7.0", features = ["napi6"] }
napi-derive = "3.4.0"
num-bigint  = "0.4.6"
num-traits  = "0.2.19"
rand        = "0.9.2"

[build-dependencies]
napi-build = "2.3.1"

[profile.release]
lto   = true
strip = "symbols"
